--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@
 
 		<form action="{{ url_for('predict')}}" method="POST">
 		<p>Enter Your Comment Here</p>
-		<!-- <input type="text" name="comment"/> -->
+		<!-- <command type="text" name="comment"/> -->
 		<textarea name="comment" rows="4" cols="50"></textarea>
 		<br/>
 
