--- a/templates/doc.html
+++ b/templates/doc.html
@@ -2,12 +2,35 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Medi-Screen</title>
+    <title>Medi-AI</title>
   </head>
   <body>
-    <h1>Welcome to use medi-screen for diabetes</h1>
-    <p>(For now this doesn't work yet.) This will return dummy data for you.</p>
-	<p>Doing a POST request to  <b> https://vaulted-bazaar-249714.appspot.com/test/  </b> should return a result of true</p>
-	<p>Ideally doing a POST request to  <b> https://vaulted-bazaar-249714.appspot.com/diabetes/  </b>  with JSON of data from the data set should return a result in JSON. Not there yet.</p>
+  <header>
+      <h1>Medi-AI Documentation</h1>
+      <hr>
+  </header>
+  <main>
+      <h2>Welcome to Medi-AI</h2>
+      <p>Here you can POST data to machine learning models for Medi-Screen.</p>
+
+      <br>
+
+      <h3>Diabetes</h3>
+      <p>POST to "This site"<b>/diabetes</b> to get a prediction from the model on diabetes. https://forexample.net/diabetes</p>
+
+
+
+      <br>
+
+
+
+
+  </main>
+  <footer>
+      <hr>
+      <a href="https://github.com/DandDevy/medi_ai">github.com/DandDevy/medi_ai</a>
+      <p><i>Note: This github project will private to public until module is finished.</i></p>
+      <p>For BSc (Honours) CIT Software Development third year <b>group project</b>. By Daniel Ashcroft, Emma Brennan, Janet Mullins and Fionn </p>
+  </footer>
   </body>
 </html>
