--- a/templates/doc.html
+++ b/templates/doc.html
@@ -30,7 +30,7 @@
       <hr>
       <a href="https://github.com/DandDevy/medi_ai">github.com/DandDevy/medi_ai</a>
       <p><i>Note: This github project will private to public until module is finished.</i></p>
-      <p>For BSc (Honours) CIT Software Development third year <b>group project</b>. By Daniel Ashcroft, Emma Brennan, Janet Mullins and Fionn </p>
+      <p>For BSc (Honours) CIT Software Development third year <b>group project</b>. By Daniel Ashcroft, Emma Brennan, Janet Mullins and Fionn O'Reilly</p>
   </footer>
   </body>
 </html>
