updated the doc.html

--- a/templates/doc.html
+++ b/templates/doc.html
@@ -6,24 +6,14 @@
   </head>
   <body>
   <header>
-      <h1>Medi-AI Documentation</h1>
+      <h1>Medi-AI web server</h1>
       <hr>
   </header>
   <main>
       <h2>Welcome to Medi-AI</h2>
-      <p>Here you can POST data to machine learning models for Medi-Screen.</p>
+      <p>Here you can GET data from machine learning models for Medi-Screen.</p>
 
-      <br>
-
-      <h3>Diabetes</h3>
-      <p>POST to "This site"<b>/diabetes</b> to get a prediction from the model on diabetes. https://forexample.net/diabetes</p>
-
-
-
-      <br>
-
-
-
+      <p>Learn who to use by checking out the updated README.md <a href="https://github.com/DandDevy/medi_ai/blob/master/README.md">here</a></p>
 
   </main>
   <footer>
