corrected spelling error in doc.html

--- a/templates/doc.html
+++ b/templates/doc.html
@@ -19,7 +19,7 @@
   <footer>
       <hr>
       <a href="https://github.com/DandDevy/medi_ai">github.com/DandDevy/medi_ai</a>
-      <p><i>Note: This github project will private to public until module is finished.</i></p>
+      <p><i>Note: This github project will be changed from private to public once the module is finished.</i></p>
       <p>For BSc (Honours) CIT Software Development third year <b>group project</b>. By Daniel Ashcroft, Emma Brennan, Janet Mullins and Fionn O'Reilly</p>
   </footer>
   </body>
